Working DataTables in Svelte.  Optional amounts and no payment of missing judge fees.  Missing fees are red.

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -7,20 +7,14 @@
 		<link rel="stylesheet" type="text/css" href="/css/tabroom.css">
 		<link rel="stylesheet" type="text/css" href="/css/fonts.css">
 		<meta name="viewport" content="width=device-width" />
-		<meta
-			property = "og:image"
-			content  = "/images/nsda-blue.png"
-		/>
-		<script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/jquery.tablesorter.min.js" integrity="sha512-qzgd5cYSZcosqpzpn7zF2ZId8f/8CHmFKZ8j7mU4OUXTNRd5g+ZHBPsgKEwoqxCtdQvExE5LprwwPAgoicguNg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<meta property = "og:image" content  = "/images/nsda-blue.png" />
+		<link 
+			href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" 
+			rel="stylesheet"
+		>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
-	<script>
-		jQuery(document).ready(() => {
-			jQuery("table").tablesorter();
-		});
-	</script>
 </html>
