Might fix the cross errors

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -8,10 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/fonts.css">
 		<meta name="viewport" content="width=device-width" />
 		<meta property = "og:image" content  = "/images/nsda-blue.png" />
-		<link 
-			href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" 
-			rel="stylesheet"
-		>
+		<link rel="stylesheet" type="text/css" href="/css/fontawesome.min.css">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
